Refactor and improve frontend and backend code