@@ -4,32 +4,30 @@ import com.calonuria.backend.dto.catalog.FanfictionResponseDTO;
 import com.calonuria.backend.model.catalog.Fanfiction;
 import com.calonuria.backend.model.catalog.FanficTag;
 import com.calonuria.backend.repository.catalog.FanfictionRepository;
-import com.calonuria.backend.repository.catalog.FanficTagRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Servicio para la gestión de fanfictions en el catálogo.
+ * Extiende BaseCatalogService para reutilizar código común.
  */
 @Service
-public class FanfictionService {
+public class FanfictionService extends BaseCatalogService<Fanfiction, FanfictionResponseDTO, Long> {
 
     private final FanfictionRepository fanfictionRepository;
-    private final FanficTagRepository fanficTagRepository;
 
-    public FanfictionService(FanfictionRepository fanfictionRepository,
-                             FanficTagRepository fanficTagRepository) {
+    public FanfictionService(FanfictionRepository fanfictionRepository) {
+        super(fanfictionRepository);
         this.fanfictionRepository = fanfictionRepository;
-        this.fanficTagRepository = fanficTagRepository;
     }
 
     /**
      * Guarda un fanfiction solo si no existe ya por ao3Id.
-     * @param fanfic fanfiction a guardar
-     * @return DTO con la información del fanfiction guardado
      */
+    @Transactional
     public FanfictionResponseDTO saveIfNotExists(Fanfiction fanfic) {
         if (fanfic.getAo3Id() != null) {
             Optional<Fanfiction> existing = fanfictionRepository.findByAo3Id(fanfic.getAo3Id());
@@ -37,53 +35,60 @@ public class FanfictionService {
                 return mapToDTO(existing.get());
             }
         }
-        return mapToDTO(fanfictionRepository.save(fanfic));
+        return saveAndMap(fanfic);
     }
 
     /**
-     * Obtiene un fanfiction por su ID.
-     * @param id ID del fanfiction
-     * @return Optional con el DTO del fanfiction
+     * Crea y guarda un fanfiction desde un DTO si no existe.
      */
+    @Transactional
+    public FanfictionResponseDTO saveFromDTO(FanfictionResponseDTO dto) {
+        Fanfiction fanfic = new Fanfiction();
+        fanfic.setAo3Id(dto.getAo3Id());
+        fanfic.setTitle(dto.getTitle());
+        fanfic.setAuthor(dto.getAuthor());
+        fanfic.setSourceMaterial(dto.getSourceMaterial());
+        fanfic.setDescription(dto.getDescription());
+        fanfic.setCoverUrl(dto.getCoverUrl());
+        fanfic.setGenre(dto.getGenre());
+        fanfic.setMainShip(dto.getMainShip());
+        fanfic.setTheme(dto.getTheme());
+        fanfic.setCurrentChapter(dto.getCurrentChapter());
+        fanfic.setTotalChapters(dto.getTotalChapters());
+        fanfic.setPublicationStatus(dto.getPublicationStatus());
+        return saveIfNotExists(fanfic);
+    }
+
+    // Alias para compatibilidad con controllers existentes
     public Optional<FanfictionResponseDTO> getFanficById(Long id) {
-        return fanfictionRepository.findById(id).map(this::mapToDTO);
+        return findById(id);
     }
 
-    /**
-     * Busca fanfictions por título.
-     * @param title título a buscar
-     * @return lista de fanfictions encontrados
-     */
+    @Override
+    @Transactional(readOnly = true)
     public List<FanfictionResponseDTO> searchByTitle(String title) {
         return fanfictionRepository.findByTitleContainingIgnoreCase(title)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream().map(this::mapToDTO).toList();
     }
 
     /**
      * Busca fanfictions por estado de publicación.
-     * @param status estado a buscar
-     * @return lista de fanfictions encontrados
      */
+    @Transactional(readOnly = true)
     public List<FanfictionResponseDTO> searchByStatus(String status) {
         return fanfictionRepository.findByPublicationStatusIgnoreCase(status)
-                .stream().map(this::mapToDTO).collect(Collectors.toList());
+                .stream().map(this::mapToDTO).toList();
     }
 
-    /**
-     * Obtiene todos los fanfictions del catálogo.
-     * @return lista de todos los fanfictions
-     */
+    // Alias para compatibilidad con controllers existentes
     public List<FanfictionResponseDTO> getAllFanfics() {
-        return fanfictionRepository.findAll().stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        return findAll();
     }
 
     /**
      * Mapea un fanfiction a su DTO de respuesta.
-     * @param fanfic fanfiction
-     * @return DTO de respuesta
      */
+    @Override
     public FanfictionResponseDTO mapToDTO(Fanfiction fanfic) {
         FanfictionResponseDTO dto = new FanfictionResponseDTO();
         dto.setId(fanfic.getId());
@@ -99,10 +104,13 @@ public class FanfictionService {
         dto.setCurrentChapter(fanfic.getCurrentChapter());
         dto.setTotalChapters(fanfic.getTotalChapters());
         dto.setPublicationStatus(fanfic.getPublicationStatus());
-        // Cargar tags desde la tabla fanfic_tag
-        List<String> tags = fanficTagRepository.findByFanfic_Id(fanfic.getId())
-                .stream().map(FanficTag::getTag).collect(Collectors.toList());
-        dto.setTags(tags);
+        
+        // Cargar tags eficientemente gracias a @BatchSize en la entidad
+        if (fanfic.getTags() != null) {
+            List<String> tags = fanfic.getTags().stream().map(FanficTag::getTag).toList();
+            dto.setTags(tags);
+        }
+
         return dto;
     }
 }
